Add statistics tracking feature with SQLite database support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: always
     volumes:
       - ./logs:/app/logs
+      - ./bot_stats.db:/app/bot_stats.db
     env_file:
       - .env
 
