--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Bot statistics database
+bot_stats.db
+bot_stats.db-journal
+
 # Flask stuff:
 instance/
 .webassets-cache
